[package]
name = "cudarc"
version = "0.19.4"
edition = "2021"
authors = ["Chelsea Lowman <clowman1993@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "Safe and minimal CUDA bindings"
homepage = "https://github.com/chelsea0x3b/cudarc"
documentation = "https://docs.rs/cudarc"
repository = "https://github.com/chelsea0x3b/cudarc"
readme = "README.md"

keywords = ["cuda", "nvidia", "gpu", "cudnn", "cublas"]
categories = [
    "api-bindings",
    "hardware-support",
    "memory-management",
    "no-std",
    "science",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = [
    "cuda-13020",
    "f16",
    "cudnn",
    "nccl",
    "cupti",
    "cusparse",
    "cusolver",
    "cusolvermg",
    "cufile",
    "nvtx",
    "cupti",
    "cutensor",
    "cufft",
]

[features]
default = [
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "driver",
    "runtime",
    "nvrtc",
    "fallback-dynamic-loading",
]

fallback-latest = []

cuda-version-from-build-system = []
cuda-11040 = []
cuda-11050 = []
cuda-11060 = []
cuda-11070 = []
cuda-11080 = []
cuda-12000 = []
cuda-12010 = []
cuda-12020 = []
cuda-12030 = []
cuda-12040 = []
cuda-12050 = []
cuda-12060 = []
cuda-12080 = []
cuda-12090 = []
cuda-13000 = []
cuda-13010 = []
cuda-13020 = []

fallback-dynamic-loading = []
dynamic-loading = []
dynamic-linking = []
static-linking = []

driver = []
nvrtc = []
cublas = ["driver"]
cublaslt = ["driver"]
runtime = ["driver"]
curand = ["driver"]
cusparse = ["driver"]
cusolver = ["driver", "cublas", "cublaslt", "cusparse"]
cusolvermg = ["cusolver"]
cufile = ["driver"]
nvtx = ["driver"]
cupti = ["runtime", "driver"]
cufft = ["driver"]


nccl-version-from-build-system = ["driver"]
nccl-21805 = ["driver"]
nccl-21903 = ["driver"]
nccl-22005 = ["driver"]
nccl-22105 = ["driver"]
nccl-22203 = ["driver"]
nccl-22403 = ["driver"]
nccl-22501 = ["driver"]
nccl-22605 = ["driver"]
nccl-22706 = ["driver"]
nccl-22809 = ["driver"]
nccl-22907 = ["driver"]
nccl-23004 = ["driver"]
nccl = ["nccl-23004"]

cudnn-version-from-build-system = ["driver"]
cudnn-80907 = ["driver"]
cudnn-91002 = ["driver"]
cudnn-92101 = ["driver"]
cudnn = ["cudnn-92101"]

cutensor-version-from-build-system = ["driver"]
cutensor-20301 = ["driver"]
cutensor-20401 = ["driver"]
cutensor-20500 = ["driver"]
cutensor-20600 = ["driver"]
cutensor = ["cutensor-20600"]

std = []
no-std = ["no-std-compat/std"]
f16 = ["dep:half"]
f8 = ["dep:float8"]
f4 = ["dep:float4"]

[dependencies]
no-std-compat = { version = "0.4.1", optional = true, features = ["alloc"] }
half = { version = "2", optional = true, default-features = false, features = [
    "num-traits",
    "rand_distr",
] }
float8 = { version = "0.7.0", optional = true }
float4 = { version = "0.2.0", optional = true }
libloading = "0.9.0"
